Fix CSSAnimationsTest unit tests when running with BGPT

A few changes were needed to get this to work in BGPT:
- Create a StubChromeClientForSPv2 so that we have a LayerTreeHost,
  without which BGPT does not create composited animations.
- Change StubChromeClientForSPv2 to tell the LayerTreeHostEmbedder to
  use layer lists when running with BGPT
- Check for filter animations as well as current filters when deciding
  if we need a filter on a given object.

Bug: 874253
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I7e057d8a225ead67728d68070e62ac62f7a33f19
Reviewed-on: https://chromium-review.googlesource.com/1230438
Commit-Queue: Robert Flack <flackr@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592144}
Former-commit-id: 96b11126f0b5a8401debfee1d10e0d40c1838aa8